# HomeHub

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  vod_server.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  default_config.py  routes.py
app/static/: site.webmanifest
app/templates/: video_template.html
app/utils/: __init__.py  cache_manager.py  video_utils.py
templates/: video_template.html
tests/: test_cache_manager.py  test_config.py  test_imports.py  test_routes.py  test_video_utils.py
