[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homehub"
version = "0.1.0"
description = "A Flask-based Video-on-Demand server with mobile-friendly UI"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Flask==2.2.5",
    "Werkzeug==3.0.6",
    "Jinja2==3.1.6",
    "MarkupSafe==2.1.2",
    "click==8.1.3",
    "itsdangerous==2.1.2",
]

[project.scripts]
homehub = "run:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]
include-package-data = true
